objects/Quote_Request_Products__c/Quote_Request_Products__c.object-meta.xml
<CustomObject>
    <label>Quote Request Products</label>
    <nameField>
        <displayFormat>QRP-{000000}</displayFormat>
        <label>Quote Request Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Request Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>