objects/Quote_Request_Products__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The Product record. Will be used in Quote Line creation. Jira ticket SS-11057.</description>
    <inlineHelpText>Please enter the quantity (i.e., number of endpoints) for this Product.</inlineHelpText>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>