objects/Quote_Request_Products__c/fields/Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request__c</fullName>
    <description>Lookup to the Quote Request. Jira ticket SS-11057.</description>
    <inlineHelpText>Please select the Quote Request to which this Product will be associated.</inlineHelpText>
    <label>Quote Request</label>
    <referenceTo>Quote_Request__c</referenceTo>
    <relationshipLabel>Quote Request Products</relationshipLabel>
    <relationshipName>Quote_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>