objects/Quote_Request_Products__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <description>A system field used in the Transform element in the Quote Request - After Insert flow. Jira ticket SS-11057.</description>
    <formula>Quote_Request__r.Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteId</label>
    <type>Text</type>
</CustomField>